--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 </head>
 
 <body>
-    <a-scene background="color: #000000">
+    <a-scene>
 
-        <a-box color="cyan">
-
-        </a-box>
+        <a-box position="1 1.5 -3" roation="0 45 0" color="#4CC3D9"></a-box>
+        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+        <a-rectangle position="1 1.07 -3" radius="0.5" height="1.5" color="#FFC65D"></a-rectangle>
+        <a-plane position="0 0 -4" roation="-90 0 0" color="#7BC8A4"></a-plane>
+        <a-sky color = "#ECECEC"></a-sky>
 
     </a-scene>
 </body>
